crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__wolfir_silverheart_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "Unimplemented",
          "name": "unknown",
          "description": "Soulbond"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Soulbond",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredStatic": {
        "mode": "Continuous",
        "affected": {
          "type": "SourceOrPaired"
        },
        "modifications": [
          {
            "type": "AddPower",
            "value": 4
          },
          {
            "type": "AddToughness",
            "value": 4
          }
        ],
        "condition": {
          "type": "SourceIsPaired"
        },
        "affected_zone": null,
        "effect_zone": null,
        "active_zones": [],
        "characteristic_defining": false,
        "description": "As long as ~ is paired with another creature, each of those creatures gets +4/+4."
      }
    }
  ],
  "source_text": "Soulbond (You may pair this creature with another unpaired creature when either enters. They remain paired for as long as you control both of them.)\nAs long as this creature is paired with another creature, each of those creatures gets +4/+4.",
  "card_name": "Wolfir Silverheart"
}
